[gd_scene load_steps=14 format=2]

[ext_resource path="res://files/buttons/inventory/item_square_frame.png" type="Texture" id=1]
[ext_resource path="res://files/buttons/inventory/item_frame_selected.png" type="Texture" id=2]
[ext_resource path="res://files/buttons/chek.png" type="Texture" id=3]
[ext_resource path="res://files/buttons/inventory/6-(item).png" type="Texture" id=4]
[ext_resource path="res://files/buttons/inventory/item_square_frame_selected.png" type="Texture" id=5]
[ext_resource path="res://mainfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://files/scripts/enchanting_panel.gd" type="Script" id=7]
[ext_resource path="res://files/aric_expansion_images/items/enchantment_sphere.png" type="Texture" id=8]
[ext_resource path="res://files/buttons/inventorypanel.png" type="Texture" id=9]
[ext_resource path="res://files/images/items/armorleather.png" type="Texture" id=10]
[ext_resource path="res://files/aric_expansion_images/items/enchantment_dust.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 20, 20 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 613, 833 )

[node name="enchanting_panel" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.486196 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -424.0
margin_bottom = -153.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 7 )

[node name="slave_select_buttons_container" type="GridContainer" parent="."]
margin_left = 651.0
margin_top = 253.0
margin_right = 923.0
margin_bottom = 295.0
columns = 3

[node name="select_slave" type="Button" parent="slave_select_buttons_container"]
margin_right = 112.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Select slave"

[node name="or_label" type="Label" parent="slave_select_buttons_container"]
margin_left = 116.0
margin_right = 142.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "or"
align = 1
valign = 1

[node name="use_essences" type="Button" parent="slave_select_buttons_container"]
margin_left = 146.0
margin_right = 272.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Use essences"

[node name="do_action" type="Button" parent="."]
margin_left = 708.0
margin_top = 555.0
margin_right = 844.0
margin_bottom = 581.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "Enchant items"

[node name="flavor_text" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 658.0
margin_top = 83.0
margin_right = -20.0
margin_bottom = -371.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
text = "BLABLA
BLABLABLA
ABLACADABLA
String4
String5
String6
String7"

[node name="resources" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 651.0
margin_top = -283.0
margin_right = -15.0
margin_bottom = -58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="resource1" type="Panel" parent="resources"]
visible = false
margin_right = 270.0
margin_bottom = 40.0
rect_min_size = Vector2( 270, 40 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 9 )

[node name="name" type="Label" parent="resources/resource1"]
margin_left = 7.0
margin_top = 11.0
margin_right = 191.0
margin_bottom = 27.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Endurance sparks"
max_lines_visible = 1

[node name="totalnumber" type="Label" parent="resources/resource1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -73.0
margin_top = -29.0
margin_right = -6.0
margin_bottom = -9.0
size_flags_horizontal = 2
size_flags_vertical = 0
align = 1

[node name="resources_label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 659.0
margin_top = -312.0
margin_right = 916.0
margin_bottom = -290.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "Required Resources:"
align = 1

[node name="items_frame" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 36.0
margin_right = 354.0
margin_bottom = -87.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 10 )

[node name="item_select_label" type="Label" parent="items_frame"]
margin_top = -26.0
margin_right = 343.0
rect_pivot_offset = Vector2( -316, 68 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "Select item"
align = 1

[node name="items_scroll" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 41.0
margin_right = 374.0
margin_bottom = -92.0
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
scroll_horizontal_enabled = false

[node name="container" type="VBoxContainer" parent="items_scroll"]
margin_right = 330.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 330, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = -2

[node name="original_button" type="TextureButton" parent="items_scroll/container"]
visible = false
margin_right = 330.0
margin_bottom = 85.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 330, 85 )
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="icon" type="TextureRect" parent="items_scroll/container/original_button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="amount" type="Label" parent="items_scroll/container/original_button"]
margin_left = 55.0
margin_top = 59.0
margin_right = 78.0
margin_bottom = 79.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "20"
align = 2

[node name="item_text" type="RichTextLabel" parent="items_scroll/container/original_button"]
margin_left = 86.0
margin_top = 10.0
margin_right = 322.0
margin_bottom = 78.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[color=yellow]Enchant1[/color]
[color=#4FCCBD]Enchant1[/color]
[color=#e32636]Enchant1[/color]
[color=green]Enchant2[/color]"
text = "Enchant1
Enchant1
Enchant1
Enchant2"

[node name="ench_filter_label" type="Label" parent="."]
margin_left = 85.0
margin_top = 537.0
margin_right = 278.0
margin_bottom = 557.0
custom_fonts/font = ExtResource( 6 )
text = "Filter by enchantment:"

[node name="dust_label" type="Label" parent="."]
margin_left = 656.0
margin_top = 23.0
margin_right = 924.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 6 )
text = "You have 0 enchantment dust"
align = 1
valign = 1
autowrap = true

[node name="ench_filter_combobox" type="OptionButton" parent="."]
margin_left = 27.0
margin_top = 565.0
margin_right = 277.0
margin_bottom = 600.0

[node name="ench_filter_reset" type="Button" parent="ench_filter_combobox"]
margin_left = 263.0
margin_right = 324.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 6 )
text = "Reset"

[node name="middle_column" type="ReferenceRect" parent="."]
margin_left = 404.0
margin_top = 20.0
margin_right = 644.0
margin_bottom = 600.0

[node name="mode_select_label" type="Label" parent="middle_column"]
margin_top = 20.0
margin_right = 240.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "Select mode:"
align = 1
valign = 1

[node name="modes_container" type="GridContainer" parent="middle_column"]
margin_top = 60.0
margin_right = 240.0
margin_bottom = 130.0
size_flags_vertical = 0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 2

[node name="mode_button" type="Button" parent="middle_column/modes_container"]
visible = false
margin_right = 120.0
margin_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
toggle_mode = true
text = "Mode"

[node name="mode_text" type="RichTextLabel" parent="middle_column"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 144.0
margin_bottom = -310.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
text = "BLABLA
BLABLABLA
ABLACADABLA
String4
String5
String6"

[node name="pair_item1" type="TextureRect" parent="middle_column"]
margin_top = 330.0
margin_right = 85.0
margin_bottom = 415.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 85, 85 )
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="middle_column/pair_item1"]
margin_left = 6.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="what_label" type="Label" parent="middle_column/pair_item1"]
margin_top = -22.0
margin_right = 85.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 6 )
text = "First"
align = 1

[node name="reset_button" type="Button" parent="middle_column/pair_item1"]
margin_left = 12.0
margin_top = 88.0
margin_right = 73.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 6 )
text = "Reset"

[node name="pair_item2" type="TextureRect" parent="middle_column"]
margin_left = 155.0
margin_top = 330.0
margin_right = 240.0
margin_bottom = 415.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 85, 85 )
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="middle_column/pair_item2"]
margin_left = 6.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="what_label" type="Label" parent="middle_column/pair_item2"]
margin_top = -22.0
margin_right = 85.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 6 )
text = "Second"
align = 1

[node name="reset_button" type="Button" parent="middle_column/pair_item2"]
margin_left = 12.0
margin_top = 88.0
margin_right = 73.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 6 )
text = "Reset"

[node name="single_item" type="TextureRect" parent="middle_column"]
margin_left = 78.0
margin_top = 330.0
margin_right = 163.0
margin_bottom = 415.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 85, 85 )
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="icon" type="TextureRect" parent="middle_column/single_item"]
margin_left = 6.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="what_label" type="Label" parent="middle_column/single_item"]
margin_top = -22.0
margin_right = 85.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 6 )
text = "Input"
align = 1

[node name="reset_button" type="Button" parent="middle_column/single_item"]
margin_left = 12.0
margin_top = 88.0
margin_right = 73.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 6 )
text = "Reset"

[node name="result_item" type="TextureRect" parent="middle_column"]
margin_left = 78.0
margin_top = 490.0
margin_right = 163.0
margin_bottom = 575.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 85, 85 )
size_flags_vertical = 0
texture = ExtResource( 5 )
expand = true

[node name="icon" type="TextureRect" parent="middle_column/result_item"]
margin_left = 6.0
margin_top = 7.0
margin_right = 80.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="what_label" type="Label" parent="middle_column/result_item"]
margin_top = -22.0
margin_right = 85.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 6 )
text = "Result"
align = 1

[node name="amount" type="Label" parent="middle_column/result_item"]
margin_left = 55.0
margin_top = 59.0
margin_right = 78.0
margin_bottom = 79.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "20"
align = 2

[connection signal="pressed" from="slave_select_buttons_container/select_slave" to="." method="select_slave"]
[connection signal="pressed" from="slave_select_buttons_container/use_essences" to="." method="deselect_slave"]
[connection signal="pressed" from="do_action" to="." method="do_action"]
[connection signal="item_selected" from="ench_filter_combobox" to="." method="on_selected_ench_changed"]
[connection signal="pressed" from="ench_filter_combobox/ench_filter_reset" to="." method="on_selected_ench_changed" binds= [ -1 ]]
